Bug 497579 - X11 KDE Plasma 'Move Mouse to Focus' Meta+F5 doesn't work
Summary: X11 KDE Plasma 'Move Mouse to Focus' Meta+F5 doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.2.4
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-16 22:09 UTC by Lily
Modified: 2025-01-09 08:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lily 2024-12-16 22:09:24 UTC
SUMMARY
Using the 'Move Mouse to Focus' KWin shortcut in X11 (Meta+F5) moves the cursor to the top left position (0, 0) instead of to the center of the active window/screen like it does in Plasma Wayland.

STEPS TO REPRODUCE
1. Enter plasma desktop in X11 
2. Click on a Window
3. Invoke the shortcut by pressing Meta+F5

OBSERVED RESULT
Mouse moves to upper-left corner of the screen.

EXPECTED RESULT
Make it move to the center of focused window.


SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.12.4-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 6 × AMD Ryzen 5 3500 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600

ADDITIONAL INFORMATION
Similar to https://bugs.kde.org/show_bug.cgi?id=493217 , but on X11.
Comment 1 David Edmundson 2025-01-02 15:37:36 UTC
Confirmed, it works on Wayland, on X11 it goes to the top left
Comment 2 Bug Janitor Service 2025-01-04 04:04:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6965
Comment 3 Vlad Zahorodnii 2025-01-09 08:30:47 UTC
Git commit e09409b6f3553ebb8bd8fe8160e62f90bcc0e62b by Vlad Zahorodnii, on behalf of Dylan Yurillo.
Committed on 09/01/2025 at 08:16.
Pushed by vladz into branch 'master'.

Fix 'Move Mouse to Focus' on X11

Changed moveMouseToFocus to involve isActive

M  +1    -1    src/plugins/zoom/zoom.cpp

https://invent.kde.org/plasma/kwin/-/commit/e09409b6f3553ebb8bd8fe8160e62f90bcc0e62b