Fix 'Move Mouse to Focus' on X11

Changed moveMouseToFocus to involve isActive

BUG: 497579